--- a/dev/linux-fairshare-dev.yml
+++ b/dev/linux-fairshare-dev.yml
@@ -54,3 +54,5 @@ dependencies:
       - urllib3==1.26.7
       - werkzeug==2.0.2
       - pyyaml==6.0
+      - flask-wtf==1.0.1
+      - wtforms==3.0.1
