--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fairshare",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Your one-stop tool for making biomedical research data and software FAIR",
   "homepage": "https://fairdataihub.org/fairshare",
   "private": true,
@@ -36,7 +36,9 @@
     "commit": "cz",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "prepare": "husky install"
+    "prepare": "run-script-os",
+    "prepare:win32": "husky install",
+    "prepare:darwin:linux": "husky install && chmod ug+x .husky/*  && chmod ug+x .git/hooks/*"
   },
   "lint-staged": {
     "./src/**/*.{ts,js,jsx,tsx,vue,json}": [
@@ -57,14 +59,14 @@
   "dependencies": {
     "@electron/remote": "2.0.10",
     "@element-plus/icons-vue": "2.1.0",
-    "@headlessui/vue": "1.7.14",
+    "@headlessui/vue": "1.6.0",
     "@kangc/v-md-editor": "2.3.15",
     "axios": "0.27.2",
     "core-js": "3.30.2",
     "crypto-js": "4.1.1",
-    "dayjs": "1.11.8",
+    "dayjs": "1.11.7",
     "doi-regex": "0.1.13",
-    "dompurify": "3.0.3",
+    "dompurify": "3.0.0",
     "electron-log": "4.4.8",
     "electron-updater": "5.0.5",
     "element-plus": "2.3.7",
@@ -77,7 +79,8 @@
     "lodash": "4.17.21",
     "marked": "4.3.0",
     "mousetrap": "1.6.5",
-    "pinia": "2.1.4",
+    "nanoid": "4.0.2",
+    "pinia": "2.0.32",
     "ps-tree": "1.2.0",
     "semver": "7.5.3",
     "uniqid": "5.4.0",
@@ -87,7 +90,7 @@
     "vue": "3.3.4",
     "vue-router": "4.2.2",
     "vue-toastification": "2.0.0-rc.5",
-    "vue3-lottie": "2.7.1",
+    "vue3-lottie": "3.0.0",
     "vue3-popper": "1.5.0",
     "vuedraggable": "4.1.0"
   },
@@ -117,16 +120,15 @@
     "@vue/cli-service": "5.0.8",
     "@vue/compiler-sfc": "3.3.4",
     "autoprefixer": "10.4.14",
-    "@babel/eslint-parser": "7.11.0",
+    "babel-eslint": "10.1.0",
     "babel-loader": "8.3.0",
     "chromatic": "6.19.9",
     "commitizen": "4.3.0",
     "copyfiles": "2.4.1",
     "cz-conventional-changelog": "3.3.0",
     "del": "6.1.1",
-    "devmoji": "2.3.0",
     "dotenv": "16.3.1",
-    "electron": "19.1.9",
+    "electron": "25.2.0",
     "electron-devtools-installer": "3.2.0",
     "electron-notarize": "1.2.2",
     "eslint": "8.43.0",
@@ -139,11 +141,12 @@
     "gulp-rename": "2.0.0",
     "husky": "8.0.3",
     "lint-staged": "13.2.2",
+    "megasanjay-devmoji": "1.2.1",
     "postcss": "8.4.24",
     "prettier": "2.8.8",
     "prettier-plugin-tailwindcss": "0.3.0",
     "pretty": "2.0.0",
-    "renovate": "35.117.2",
+    "run-script-os": "1.1.6",
     "tailwindcss": "3.1.8",
     "tailwindcss-debug-screens": "2.2.1",
     "vue-cli-plugin-electron-builder": "2.1.1",
